fixed layout issues

--- a/src/components/Counter/Counter.css
+++ b/src/components/Counter/Counter.css
@@ -6,6 +6,7 @@
     border-radius: 3px;
     margin-bottom: 10px;
     margin-top: 10px;
+    box-sizing: border-box;
 }
 
 .reset {
@@ -15,6 +16,7 @@
     display: flex;
     background-color: rebeccapurple;
     justify-content: center;
+    box-sizing: border-box;
 }
 
 
@@ -27,6 +29,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .NumWrap {
@@ -34,6 +37,7 @@
     border-radius: 9px;
     border-style: solid;
     margin-bottom: 10px;
+    box-sizing: border-box;
 }
 
 .CounterBtnsWrap {
@@ -45,6 +49,7 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 10px;
+    box-sizing: border-box;
 }
 
 .counter {
@@ -52,4 +57,5 @@
     text-decoration: none;
     padding-left: 20px;
     padding-right: 10px;
+    box-sizing: border-box;
 }
