--- a/src/components/Counter2/Counter2.css
+++ b/src/components/Counter2/Counter2.css
@@ -6,7 +6,6 @@
     border-radius: 3px;
     margin-bottom: 10px;
     margin-top: 10px;
-    margin-right: 6px;
 }
 
 .reset {
@@ -16,13 +15,13 @@
     display: flex;
     background-color: rebeccapurple;
     justify-content: center;
-    margin-right: 6px;
 }
 
 .counterV2 {
     color: rebeccapurple;
     padding-left: 10px;
     padding-right: 10px;
+    box-sizing: border-box;
 }
 
 .set {
@@ -32,6 +31,8 @@
     display: flex;
     background-color: hotpink;
     justify-content: center;
+    margin-top: 10px;
+    box-sizing: border-box;
 }
 
 .CounterMain {
@@ -44,7 +45,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-
+    box-sizing: border-box;
 }
 
 .NumWrap {
@@ -52,15 +53,15 @@
     border-radius: 9px;
     border-style: solid;
     margin-bottom: 10px;
+    box-sizing: border-box;
 }
 
 .CounterBtnsWrap {
     width: 70%;
-    height: 50px;
     border-radius: 9px;
     border-style: solid;
     display: flex;
     justify-content: center;
-    flex-direction: row;
     align-items: center;
+    box-sizing: border-box;
 }
